// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginPage > should dispatch alert component with error message 1`] = `
<div>
  <div
    class="bg-background flex min-h-screen flex-col items-center justify-center"
  >
    <div
      class="xs:border-primary/15 xs:rounded-lg xs:border xs:shadow-xl p-8 sm:max-w-md"
    >
      <div
        class="flex flex-col gap-4"
      >
        <h2
          class="text-center"
        >
          Log In
        </h2>
        <form
          class="flex flex-col gap-2"
        >
          <div
            class="mb-4 w-full max-w-sm min-w-[200px]"
          >
            <div
              class="relative"
            >
              <input
                autocomplete="off"
                class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                id="email"
                name="email"
                placeholder="Username"
                required=""
                type="email"
                value=""
              />
              <label
                class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                for="email"
              >
                Username
                 *
              </label>
            </div>
          </div>
          <div
            class="mb-4 w-full max-w-sm min-w-[200px]"
          >
            <div
              class="relative"
            >
              <input
                autocomplete="off"
                class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                id="password"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value=""
              />
              <label
                class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                for="password"
              >
                Password
                 *
              </label>
            </div>
          </div>
          <div
            class="mb-4 flex items-center"
          >
            <div
              class="peer relative flex cursor-pointer items-center"
            >
              <input
                class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded border border-neutral-500/15 transition-all checked:shadow-sm"
                id="remember"
                type="checkbox"
              />
              <span
                class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
              >
                <svg
                  class="h-3.5 w-3.5"
                  fill="currentColor"
                  stroke="currentColor"
                  stroke-width="1"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <label
              class="peer-has-checked:text-primary -mb-1 ml-2 cursor-pointer text-sm text-neutral-500/30 transition-colors select-none"
              for="remember"
            >
              Remember me
            </label>
          </div>
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            <span
              class="-mb-0.75"
            >
              Submit
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
    >
      <div
        class="alert alert-error"
        role="alert"
      >
        <div
          class="flex items-center justify-between gap-1"
        >
          <div
            class="flex items-center justify-center"
          />
          <span
            class="-mb-1"
          >
            Unauthorized
          </span>
        </div>
        <button
          aria-label="Close"
          class="flex cursor-pointer items-center justify-center rounded-lg"
          type="button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
          <span
            class="material-symbols-outlined !text-xl !font-medium"
          >
            close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage > should render 1`] = `
<div>
  <div
    class="bg-background flex min-h-screen flex-col items-center justify-center"
  >
    <div
      class="xs:border-primary/15 xs:rounded-lg xs:border xs:shadow-xl p-8 sm:max-w-md"
    >
      <div
        class="flex flex-col gap-4"
      >
        <h2
          class="text-center"
        >
          Log In
        </h2>
        <form
          class="flex flex-col gap-2"
        >
          <div
            class="mb-4 w-full max-w-sm min-w-[200px]"
          >
            <div
              class="relative"
            >
              <input
                autocomplete="off"
                class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                id="email"
                name="email"
                placeholder="Username"
                required=""
                type="email"
                value=""
              />
              <label
                class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                for="email"
              >
                Username
                 *
              </label>
            </div>
          </div>
          <div
            class="mb-4 w-full max-w-sm min-w-[200px]"
          >
            <div
              class="relative"
            >
              <input
                autocomplete="off"
                class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                id="password"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value=""
              />
              <label
                class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                for="password"
              >
                Password
                 *
              </label>
            </div>
          </div>
          <div
            class="mb-4 flex items-center"
          >
            <div
              class="peer relative flex cursor-pointer items-center"
            >
              <input
                class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded border border-neutral-500/15 transition-all checked:shadow-sm"
                id="remember"
                type="checkbox"
              />
              <span
                class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
              >
                <svg
                  class="h-3.5 w-3.5"
                  fill="currentColor"
                  stroke="currentColor"
                  stroke-width="1"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <label
              class="peer-has-checked:text-primary -mb-1 ml-2 cursor-pointer text-sm text-neutral-500/30 transition-colors select-none"
              for="remember"
            >
              Remember me
            </label>
          </div>
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            <span
              class="-mb-0.75"
            >
              Submit
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
    />
  </div>
</div>
`;
